# bull

./: .gitignore  Cargo.toml  README.md  bull.toml  todo.md
src/: main.rs  read_config.rs
