[package]
name = "bull"
version = "0.1.0"
authors = ["LeopoldArkham <leopold.arkham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.106"
serde = "1.0.106"
toml = "0.5.6"
rustygit = "0.4.2"
rm_rf = "0.6.1"
